--- a/css/utils/_modal.scss
+++ b/css/utils/_modal.scss
@@ -90,6 +90,7 @@ clr-modal.large .modal-dialog {
 }
 
 .modal-footer .btn.btn-outline {
+    margin-right: 5px;
     border: 1px solid #afafaf;
     color: #8c8c8c !important;
     background-color: white;
